Mobile version css is done - Finished week-2-exercise-2.1

--- a/Week-2/Exercise-2.1/index.css
+++ b/Week-2/Exercise-2.1/index.css
@@ -49,3 +49,11 @@ button {
     display: flex;
     flex-direction: column;
 } */
+
+@media screen and (max-width: 600px)  {
+    .articles{
+        display: flex;
+        flex-direction: column;
+    }
+       
+}
