--- a/Week-2/Exercise-2.2/index.css
+++ b/Week-2/Exercise-2.2/index.css
@@ -1,37 +1,90 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .main-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.box-1{
-    width: 5rem;
-    height: 5rem;
-    background-color: red;
+.all-boxes {
+  display: flex;
 }
 
-.box-2{
-    width: 5rem;
-    height: 5rem;
-    background-color: yellow;
+.box-1,
+.box-2,
+.box-3,
+.box-4 {
+  width: 5rem;
+  height: 5rem;
+  transition: 1s;
 }
 
-.box-3{
-    width: 5rem;
-    height: 5rem;
-    background-color: blue;
+.hi{
+    position: absolute;
+    z-index: -1;
 }
 
-.box-4{
-    width: 5rem;
-    height: 5rem;
-    background-color: green;
+.box-1 {
+  background-color: red;
+}
+
+/* .box-1:hover {
+  transform: translate(-5rem) rotate(90deg);
+} */
+
+.box-2 {
+  background-color: yellow;
+}
+
+/* .box-2:hover {
+    transform: translate(-5rem) rotate(90deg);
+  } */
+
+.box-3 {
+  background-color: blue;
+}
+
+/* .box-3:hover {
+    transform: translate(-5rem) rotate(-90deg);
+  } */
+
+.box-4 {
+  background-color: green;
+}
+
+/* .box-4:hover {
+    transform: translate(-5rem) rotate(90deg);
+  } */
+
+/* .box {
+  -webkit-transition: all 0.8s ease;
+  -moz-transition: all 0.8s ease;
+  -ms-transition: all 0.8s ease;
+  -o-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+} */
+
+.all-boxes:hover .box-1 {
+  transform: rotate(90deg);
+  transform-origin: top left;
+}
+
+.all-boxes:hover .box-2 {
+  transform: rotate(-90deg);
+  transform-origin: top right;
+}
+
+.all-boxes:hover .box-3 {
+  transform: rotate(-90deg);
+  transform-origin: bottom left;
+}
+
+.all-boxes:hover .box-4 {
+  transform: rotate(90deg);
+  transform-origin: bottom right;
 }
